[tool.poetry]
name = "tassistant"
version = "0.1.1"
description = "Chatgpt UI for assistant API - based on gpt-assistant-api-ui by ryo-ma"
authors = ["trotor <tero.ronkko@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10 || ^3.11"
streamlit = "^1.28.2"
openai = "^1.3.2"
black = "^23.12.1"
python-dotenv = "^1.0.1"
streamlit-authenticator = "^0.3.2"
streamlit-js-eval = "^0.1.7"

[tool.poetry.group.develop.dependencies]
black = "^23.11.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
